<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.cast.treinamento.app.ContatoActivity" >

    <item
        android:id="@+id/action_novo"
        android:title="@string/action_novo"
        app:showAsAction="never"/>

    <group android:id="@+id/group_selecao_obrigatoria" >
        <item
            android:id="@+id/action_editar"
            android:title="@string/menu_editar"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_excluir"
            android:title="@string/menu_excluir"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_ligar"
            android:title="@string/action_ligar"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_sms"
            android:title="@string/action_sms"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_site"
            android:title="@string/action_site"
            app:showAsAction="never"/>
    </group>

</menu>